--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -13,7 +13,7 @@
                     <h4 class="mb-0">{{ user.first_name }}'s Profile</h4>
                 </div>
                <!-- Solicitudes de amistad pendientes -->
-<h3 class="mt-5 mb-4">Friend Requests</h3>
+<h3 class="mt-5 mb-4 text-center">Friend Requests</h3>
 
 {% if pending_requests %}
     <div class="row justify-content-center">
@@ -44,15 +44,17 @@
         {% endfor %}
     </div>
 {% else %}
-    <p class="text-muted">No pending friend requests.</p>
+    <div class="card shadow-sm mt-4">
+        <div class="card-body text-center">
+            <p class="text-muted mb-0">No pending friend requests.</p>
+        </div>
+    </div>
 {% endif %}
-
-
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-4 text-center">
-                            <img src="{{ user.profile_picture.url }}" alt="Profile Picture" class="img-fluid rounded-circle mb-3" style="max-width: 150px;">
-                        </div>
+                            <img src="{{ user.profile_picture.url }}" alt="Profile Picture" class="img-fluid profile-picture mb-3">
+                        </div>                        
                         <div class="col-md-8">
                             <h5 class="card-title">{{ user.username }}</h5>
                             <p class="card-text"><strong>Phone:</strong> {{ user.phone }}</p>
@@ -79,7 +81,7 @@
                 <div class="card-body">
                     <!-- Añadimos la foto de perfil y el nombre del usuario -->
                     <div class="d-flex align-items-center mb-3">
-                        <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+                        <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture  me-2" style="width: 50px; height: 50px;">
                         <div>
                             <h6 class="mb-0">{{ post.user.username }}</h6>
                             <small class="text-muted">Posted on {{ post.created_at }}</small>
