--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -20,17 +20,23 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-custom">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand text-light" href="{% url 'home' %}">Navbar</a>
+            
+            <!-- Botón de alternancia para dispositivos móviles -->
+            <button class="btn btn-outline-light navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+    
+            <!-- Formulario de búsqueda -->
             {% if user.is_authenticated %}
-            <form class="d-flex ms-auto" method="get" action="{% url 'search_users' %}">
+            <form class="d-flex order-lg-2 order-3 ms-auto me-2 btn-search" method="get" action="{% url 'search_users' %}">
                 <input class="form-control me-2" type="search" placeholder="Search users" name="username">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn btn-outline-light" type="submit">Search</button>
             </form>
             {% endif %}
-            <div class="collapse navbar-collapse" id="navbarNav">
+    
+            <!-- Menú de navegación -->
+            <div class="collapse navbar-collapse order-lg-3 order-2" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="{% url 'home' %}">Inicio</a>
@@ -51,15 +57,17 @@
                         </li>
                     {% endif %}
                 </ul>
-                {% if user.is_authenticated %}
-                <!-- Bootstrap icon  -->
-                <a href="{% url 'create_post' %}" class="btn btn-success btn-lg ms-auto" title="Create Post">
-                    <i class="bi bi-plus"></i> 
-                </a>
-            {% endif %}
             </div>
+    
+            <!-- Botón de crear post -->
+            {% if user.is_authenticated %}
+            <a href="{% url 'create_post' %}" class="btn btn-outline-light btn-post btn-lg ms-auto order-lg-4" title="Create Post">
+                <i class="bi bi-plus"></i> 
+            </a>
+            {% endif %}
         </div>
     </nav>
+    
     
     <div class="container mt-4">
         {% block content %}
