--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -118,14 +118,15 @@ body {
 .profile-picture {
     max-width: 160px;
     max-height: 160px;
-    object-fit: contain;
-    border-radius: 50%;
+    object-fit: cover;
+    border-radius: 25px;
 }
 
 .miniature-profile-picture {
-    width: 50px; 
-    height: 50px;
+    width: 60px; 
+    height: 60px;
     border-radius: 50%;
+    background-size: cover;
 }
 
 
@@ -142,4 +143,19 @@ body {
         margin: 20px;
         align-items: center;
     }
+
+    .profile-picture {
+        max-width: 150px; /* Reducir el tamaño de la imagen */
+        margin-bottom: 10px; /* Añadir un margen inferior para separación */
+    }
+
+    .card-body .row {
+        flex-direction: column; /* Forzar que las columnas se apilen verticalmente */
+        align-items: center; /* Centrar los elementos verticales */
+    }
+
+    .col-md-8 {
+        text-align: center; /* Centrar el texto en pantallas pequeñas */
+    }
+
 }
