--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -13,16 +13,16 @@
                 </div>
 
                 {% if user == request.user %}
-                <!-- Bloque de solicitudes de amistad solo visible en el propio perfil -->
+                <!-- Solicitudes de amistad solo visible en el propio perfil -->
                 <h3 class="mt-5 mb-4 text-center">Friend Requests</h3>
 
                 {% if pending_requests %}
                     <div class="row justify-content-center">
                         {% for request in pending_requests %}
-                            <div class="col-md-12 col-lg-8"> <!-- Ocupa el 100% en pantallas medianas y más pequeñas -->
-                                <div class="card mb-3 shadow-lg"> <!-- Sombra más pronunciada -->
+                            <div class="col-md-12 col-lg-8"> 
+                                <div class="card mb-3 shadow-lg"> 
                                     <div class="card-body d-flex align-items-center">
-                                        <img src="{{ request.from_user.profile_picture.url }}" alt="{{ request.from_user.username }}" class="rounded-circle me-3" style="width: 60px; height: 60px;"> <!-- Imagen un poco más grande -->
+                                        <img src="{{ request.from_user.profile_picture.url }}" alt="{{ request.from_user.username }}" class="img-fluid me-3 miniature-profile-picture "> 
                                         
                                         <!-- Información del usuario -->
                                         <div class="flex-grow-1">
@@ -52,19 +52,20 @@
                     </div>
                 {% endif %}
                 {% endif %}
-
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-md-4 text-center">
+                        <div class="col-md-4 col-12 text-center mb-3 mb-md-0"> 
                             <img src="{{ user.profile_picture.url }}" alt="Profile Picture" class="img-fluid profile-picture mb-3">
                         </div>                        
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-12"> 
                             <h5 class="card-title">{{ user.username }}</h5>
-                            <p class="card-text"><strong>Phone:</strong> {{ user.phone }}</p>
-                            <p class="card-text"><strong>Email:</strong> {{ user.email }}</p>
-                            <p class="card-text"><strong>Languages to Learn:</strong> {{ user.languages_to_learn }}</p>
-                            <p class="card-text"><strong>Languages to Teach:</strong> {{ user.languages_to_teach }}</p>
-                            <p class="card-text"><strong>About:</strong> {{ user.about }}</p>
+                            <ul class="list-unstyled"> 
+                                <li class="card-text"><strong>Phone:</strong> {{ user.phone }}</li>
+                                <li class="card-text"><strong>Email:</strong> {{ user.email }}</li>
+                                <li class="card-text"><strong>Languages to Learn:</strong> {{ user.languages_to_learn }}</li>
+                                <li class="card-text"><strong>Languages to Teach:</strong> {{ user.languages_to_teach }}</li>
+                                <li class="card-text"><strong>About:</strong> {{ user.about }}</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -83,7 +84,7 @@
         {% for post in posts %}
             <div class="card mb-3">
                 <div class="card-body">
-                    <!-- Añadimos la foto de perfil y el nombre del usuario -->
+                    <!-- Foto de perfil + nombre del usuario -->
                     <div class="d-flex align-items-center mb-3">
                         <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture  me-2" style="width: 50px; height: 50px;">
                         <div>
@@ -92,7 +93,7 @@
                         </div>
                     </div>
                     
-                    <!-- Título y contenido de la publicación -->
+                    <!-- Título/contenido publicación -->
                     <h5 class="card-title">{{ post.title }}</h5>
                     <p class="card-text">{{ post.content }}</p>
                     
