--- a/contacts/templates/contacts/contacts_list.html
+++ b/contacts/templates/contacts/contacts_list.html
@@ -2,7 +2,7 @@
 
 {% block title %}My Contacts{% endblock %}
 
-    {% block content %}
+{% block content %}
 <div class="container mt-5">
     <h2 class="card-title p-3 bg-custom text-white rounded shadow-sm">My Contacts</h2>
     
@@ -13,7 +13,7 @@
                     <div class="card mb-3 shadow-sm">
                         <div class="card-body d-flex flex-wrap align-items-center">
                             <!-- Imagen de perfil del contacto -->
-                            <img src="{{ contact.profile_picture.url }}" alt="{{ contact.username }}" class="rounded-circle me-3 mb-2" style="width: 50px; height: 50px;">
+                            <img src="{{ contact.profile_picture.url }}" alt="{{ contact.username }}" class="miniature-profile-picture me-2">
                             
                             <!-- Información del contacto -->
                             <div class="flex-grow-1">
@@ -21,11 +21,17 @@
                                 <p class="text-muted mb-1">{{ contact.email }}</p>
                             </div>
 
-                            <!-- Botón de acción -->
-                            <div class="w-100 mt-2">
-                                <a href="{% url 'profile' contact.username %}" class="btn btn-info btn-sm w-100">
+                            <!-- Botones de acción -->
+                            <div class="w-100 mt-2 d-flex justify-content-between">
+                                <a href="{% url 'profile' contact.username %}" class="btn btn-info btn-sm w-45">
                                     <i class="fas fa-user"></i> View Profile
                                 </a>
+                                <form method="post" action="{% url 'remove_contact' contact.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-danger btn-sm w-45">
+                                        <i class="fas fa-user-times"></i> Delete
+                                    </button>
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -37,4 +43,3 @@
     {% endif %}
 </div>
 {% endblock %}
-
