--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -7,27 +7,26 @@
     <h1 class="display-4">Welcome to XLang!</h1>
     <h2 class="mt-4">Welcome, {{ user.username }}!</h2>
 </div>
-
 <!-- Posts del perfil y de los contactos -->
 <h3 class="card-title mt-5 p-3 bg-custom text-white rounded shadow-sm">Posts</h3>
 
 {% for post in posts %}
-    <div class="card mb-3">
-        <div class="card-body">
-            <div class="d-flex align-items-center mb-3">
-                <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="rounded-circle me-2" style="width: 50px; height: 50px;">
-                <div>
-                    <h6 class="mb-0">{{ post.user.username }}</h6>
-                    <small class="text-muted">Posted on {{ post.created_at }}</small>
+    {% if post.user == user or post.user in user.friends.all %}
+        <div class="card mb-5">
+            <div class="card-body">
+                <div class="d-flex align-items-center mb-3">
+                    <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture img-fluid me-2">
+                    <div>
+                        <h6 class="mb-0">{{ post.user.username }}</h6>
+                        <small class="text-muted">Posted on {{ post.created_at }}</small>
+                    </div>
                 </div>
+                <h5 class="card-title">{{ post.title }}</h5>
+                <p class="card-text">{{ post.content }}</p>
             </div>
-            <h5 class="card-title">{{ post.title }}</h5>
-            <p class="card-text">{{ post.content }}</p>
         </div>
-    </div>
+    {% endif %}
 {% empty %}
     <p>No posts yet.</p>
 {% endfor %}
-
-
 {% endblock %}
