--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -86,7 +86,7 @@
                 <div class="card-body">
                     <!-- Foto de perfil + nombre del usuario -->
                     <div class="d-flex align-items-center mb-3">
-                        <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture  me-2" style="width: 50px; height: 50px;">
+                        <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture me-2" >
                         <div>
                             <h6 class="mb-0">{{ post.user.username }}</h6>
                             <small class="text-muted">Posted on {{ post.created_at }}</small>
