Publicaciones con img + link implementado

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -130,6 +130,10 @@ body {
     background-size: cover;
 }
 
+.post-picture {
+    max-height: 680px;
+    max-width: 680px;
+}
 
 /* Extra style responsive */
 @media (max-width: 992px) {
