--- a/posts/templates/posts/post_form.html
+++ b/posts/templates/posts/post_form.html
@@ -5,7 +5,6 @@
 
 {% block content %}
 <div class="container mt-5">
-   
     <!-- Formulario para crear/editar post -->
     <div class="card">
         <div class="card-header bg-primary text-white">
@@ -14,16 +13,29 @@
             </h4>
         </div>
         <div class="card-body">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
+                
                 <div class="mb-3">
                     {{ form.title.label_tag }}
                     {{ form.title|add_class:"form-control" }}
                 </div>
+                
                 <div class="mb-3">
                     {{ form.content.label_tag }}
                     {{ form.content|add_class:"form-control" }}
                 </div>
+                
+                <div class="mb-3">
+                    {{ form.image.label_tag }}
+                    {{ form.image|add_class:"form-control" }}
+                </div>
+                
+                <div class="mb-3">
+                    {{ form.link.label_tag }}
+                    {{ form.link|add_class:"form-control" }}
+                </div>
+                
                 <div class="d-grid">
                     <button type="submit" class="btn btn-primary">Save</button>
                 </div>
