--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -15,7 +15,7 @@
         <div class="card mb-5">
             <div class="card-body">
                 <div class="d-flex align-items-center mb-3">
-                    <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture img-fluid me-2">
+                    <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture me-2">
                     <div>
                         <h6 class="mb-0">{{ post.user.username }}</h6>
                         <small class="text-muted">Posted on {{ post.created_at }}</small>
