--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -38,12 +38,13 @@
             <!-- Menú de navegación -->
             <div class="collapse navbar-collapse order-lg-3 order-2" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'home' %}">Inicio</a>
-                    </li>
                     {% if user.is_authenticated %}
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{% url 'home' %}">Home</a>
+                        </li>
+                    
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profile' username=request.user.username %}">Perfil</a>
+                            <a class="nav-link" href="{% url 'profile' username=request.user.username %}">Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'contacts_list' %}">Contacts</a>
@@ -53,7 +54,7 @@
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Acceder</a>
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
                         </li>
                     {% endif %}
                 </ul>
