--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -128,12 +128,20 @@ body {
     width: 80px; 
     height: 80px;
     border-radius: 50%;
-    object-fit:inherit;
+    object-fit:cover;
     background-color: #f0f0f0; /* color de fondo para mejorar la estética */
     background-size: cover;
     background-position: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.miniature-comment-picture {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
 
 /* Extra style responsive */
 @media (max-width: 992px) {
