--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-custom">
         <div class="container">
-            <a class="navbar-brand text-light" href="{% url 'home' %}">Navbar</a>
+            <a class="navbar-brand text-light" href="{% url 'home' %}">Xlang</a>
             
             <!-- Botón de alternancia para dispositivos móviles -->
             <button class="btn btn-outline-light navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
