--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -16,10 +16,14 @@
         <div class="card mb-5">
             <div class="card-body">
                 <div class="d-flex align-items-center mb-3">
-                    <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture me-2">
+                    <a href="{% url 'profile' post.user.username %}">
+                        <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture me-2">
+                    </a>
                     <div>
-                        <h6 class="mb-0">{{ post.user.username }}</h6>
-                        <small class="text-muted">Posted on {{ post.created_at }}</small>
+                        <a href="{% url 'profile' post.user.username %}" class="text-decoration-none">
+                            <h6 class="mb-0">{{ post.user.username }}</h6>
+                            <small class="text-muted">Posted on {{ post.created_at }}</small>
+                        </a>
                     </div>
                 </div>
                 <h5 class="card-title">{{ post.title }}</h5>
@@ -58,9 +62,13 @@
                         {% for comment in post.comments.all %}
                             <li class="list-group-item d-flex align-items-start">
                                 <!-- Imagen de perfil del usuario que hizo el comentario -->
-                                <img src="{{ comment.user.profile_picture.url }}" alt="{{ comment.user.username }}" class="miniature-comment-picture me-2">
+                                <a href="{% url 'profile' comment.user.username %}">
+                                    <img src="{{ comment.user.profile_picture.url }}" alt="{{ comment.user.username }}" class="miniature-comment-picture me-2">
+                                </a>
                                 <div>
-                                    <strong>{{ comment.user.username }}:</strong>
+                                    <a href="{% url 'profile' comment.user.username %}" class="text-decoration-none">
+                                        <strong>{{ comment.user.username }}:</strong>
+                                    </a>
                                     <p class="mb-1">{{ comment.content }}</p>
                                     <small class="text-muted">{{ comment.created_at }}</small>
                                 </div>
