--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -18,16 +18,23 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
+    <!-- Loading spinner -->
+    <div id="loader" class="loading-overlay">
+        <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>    
+    
     <nav class="navbar navbar-expand-lg navbar-light bg-custom">
         <div class="container">
             <a class="navbar-brand text-light" href="{% url 'home' %}">Xlang</a>
             
-            <!-- Botón de alternancia para dispositivos móviles -->
+            <!-- Burger btn -->
             <button class="btn btn-outline-light navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
     
-            <!-- Formulario de búsqueda -->
+            <!-- Form -->
             {% if user.is_authenticated %}
             <form class="d-flex order-lg-2 order-3 ms-auto me-2 btn-search" method="get" action="{% url 'search_users' %}">
                 <input class="form-control me-2" type="search" placeholder="Search users" name="username">
@@ -35,7 +42,7 @@
             </form>
             {% endif %}
     
-            <!-- Menú de navegación -->
+            <!-- Navigation -->
             <div class="collapse navbar-collapse order-lg-3 order-2" id="navbarNav">
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
@@ -60,7 +67,7 @@
                 </ul>
             </div>
     
-            <!-- Botón de crear post -->
+            <!-- Post btn -->
             {% if user.is_authenticated %}
             <a href="{% url 'create_post' %}" class="btn btn-outline-light btn-post btn-lg ms-auto order-lg-4" title="Create Post">
                 <i class="bi bi-plus"></i> 
@@ -87,5 +94,6 @@
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/loading.js' %}"></script>
 </body>
 </html>
