--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -32,13 +32,13 @@
 
                                         <!-- Botones de acción -->
                                         <div>
-                                            <a href="{% url 'accept_friend_request' request.id %}" class="btn btn-success btn-sm me-2">
+                                            <a href="{% url 'accept_friend_request' request.id %}" class="btn btn-sm-transparent me-2">
                                                 <i class="fas fa-check"></i> Accept
                                             </a>
-                                            <a href="{% url 'reject_friend_request' request.id %}" class="btn btn-danger btn-sm">
+                                            <a href="{% url 'reject_friend_request' request.id %}" class="btn btn-sm-transparent">
                                                 <i class="fas fa-times"></i> Reject
                                             </a>
-                                        </div>
+                                        </div>                                     
                                     </div>
                                 </div>
                             </div>
