--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -65,6 +65,7 @@
                                 <li class="card-text"><strong>Languages to Learn:</strong> {{ user.languages_to_learn }}</li>
                                 <li class="card-text"><strong>Languages to Teach:</strong> {{ user.languages_to_teach }}</li>
                                 <li class="card-text"><strong>About:</strong> {{ user.about }}</li>
+                                <li class="card-text"><strong>Total Friends:</strong> {{ total_friends }}</li>
                             </ul>
                         </div>
                     </div>
